# nightstorm-vscode-theme

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  vsc-extension-quickstart.md
src/nightstorm/: color_manipulation.py  generate.py  generate_icon.py  generate_themes.py  plot.py  template.json
tests/: test_color_manipulation.py
themes/: Nightstorm-blue.json  Nightstorm-color-theme.json  Nightstorm-cyan.json  Nightstorm-magenta.json  Nightstorm-orange.json  Nightstorm-turquoise.json
