[project]
name = "nightstorm"
version = "0.0.1"
description = "A theme utilizing the Oklab color space."
authors = [
    {name = "Okko Hartikainen", email = "okko.hartikainen@yandex.com"},
]
dependencies = ["skia-python>=87.6", "shapely>=2.0.7"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.0",
    "pyqt6>=6.8.1",
]

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pylint>=3.3.4",
    "pytest>=8.3.4",
]

[tool.pdm.scripts]
generate.composite = [
    "python -m nightstorm.generate_themes",
    "python -m nightstorm.generate_icon",
]
plot = "python -m nightstorm.plot"
lint = "pylint src/ tests/"
test = "pytest"

[tool.pylint.MAIN]
extension-pkg-allow-list = ["skia"]
